<resources>
    <string name="app_name">Around Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starred_places">Starred Places</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="invalid_user_or_pass">Invalid username or password</string>
    <string name="ok">Ok</string>
    <string name="defaultSort">پیش فرض</string>
    <string name="LikesCount">تعداد لایک ها</string>
    <string name="totalViews">تعداد بازدید ها</string>
    <string name="search">جست و جو درباره ی این مکان</string>
</resources>
